package model;

import java.io.Serializable;

class Holder implements Serializable
{
    Room[] luxuryDoubleRoom=new Room[10]; //Luxury
    Room[] deluxeDoubleRoom=new Room[20]; //Deluxe
    Room[] luxurySingleRoom=new Room[10]; //Luxury
    Room[] deluxeSingleRoom=new Room[20]; //Deluxe
}
