@startuml

title __HOTEL-MANAGEMENT-PROJECT-JAVA-MASTER's Class Diagram__\n

  namespace  {
    class Doubleroom {
    }
  }
  

  namespace  {
    class Food {
    }
  }
  

  namespace  {
    class Hotel {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class NotAvailable {
    }
  }
  

  namespace  {
    class Singleroom {
    }
  }
  

  namespace  {
    class holder {
    }
  }
  

  namespace  {
    class write {
    }
  }
  

  Doubleroom .up.|> java.io.Serializable
  Doubleroom -up-|> Singleroom
  Food .up.|> java.io.Serializable
  Singleroom .up.|> java.io.Serializable
  holder .up.|> java.io.Serializable
  write .up.|> java.lang.Runnable
  write o-- holder : hotel_ob


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
